--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,4 +12,23 @@
 
     <artifactId>server</artifactId>
     <version>1.0</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>me.rubendm.captiom</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.2</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <outputDirectory>../out/production/captiom/server</outputDirectory>
+        <testOutputDirectory>../out/test/captiom/server</testOutputDirectory>
+        <directory>../out/build/captiom/server</directory>
+    </build>
 </project>
