--- a/server/pom.xml
+++ b/server/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>spark-core</artifactId>
             <version>2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
