--- a/website/bower.json
+++ b/website/bower.json
@@ -11,5 +11,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "polymer": "Polymer/polymer#~1.1.3"
+  }
 }
