--- a/website/bower.json
+++ b/website/bower.json
@@ -2,7 +2,7 @@
   "name": "captiom-website",
   "version": "1.0.0",
   "authors": [
-    "Rubén Díaz Martínez <rubendm92@gmail.com>"
+    "Rubén Díaz Martínez"
   ],
   "license": "ISC",
   "ignore": [
@@ -13,6 +13,11 @@
     "tests"
   ],
   "dependencies": {
+    "iron-form": "PolymerElements/iron-form#~1.0.9",
+    "paper-button": "PolymerElements/paper-button#~1.0.4",
+    "paper-input": "PolymerElements/paper-input#~1.0.14",
+    "paper-item": "PolymerElements/paper-item#~1.0.2",
+    "paper-menu": "PolymerElements/paper-menu#~1.1.0",
     "polymer": "Polymer/polymer#~1.1.3"
   }
 }
