--- a/website/bower.json
+++ b/website/bower.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "iron-ajax": "PolymerElements/iron-ajax#~1.0.4",
     "iron-form": "PolymerElements/iron-form#~1.0.9",
+    "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#~1.0.4",
+    "iron-validator-behavior": "PolymerElements/iron-validator-behavior#~1.0.1",
     "neon-animation": "PolymerElements/neon-animation#~1.0.6",
     "paper-button": "PolymerElements/paper-button#~1.0.4",
     "paper-input": "PolymerElements/paper-input#~1.0.14",
