--- a/server/pom.xml
+++ b/server/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
