--- a/website/bower.json
+++ b/website/bower.json
@@ -6,7 +6,7 @@
     "iron-elements": "PolymerElements/iron-elements#^1.0.0",
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
-    "page": "visionmedia/page.js#~1.6.3"
+    "cotton-push": "https://bitbucket.org/cottons/cotton-push.git"
   },
   "devDependencies": {
     "web-component-tester": "*",
