Implement patient and device configuration

--- a/website/bower.json
+++ b/website/bower.json
@@ -2,11 +2,13 @@
   "name": "polymer-starter-kit",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.1.0",
+    "polymer": "Polymer/polymer#^1.2.0",
     "iron-elements": "PolymerElements/iron-elements#^1.0.0",
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
-    "neon-elements": "PolymerElements/neon-elements#^1.0.0",
-    "cotton-push": "https://bitbucket.org/cottons/cotton-push.git"
+    "neon-animation": "PolymerElements/neon-animation#^1.0.7",
+    "cotton-push": "https://bitbucket.org/cottons/cotton-push.git",
+    "iron-list": "PolymerElements/iron-list#~1.1.5",
+    "iron-selector": "PolymerElements/iron-selector#~1.0.8"
   },
   "devDependencies": {
     "web-component-tester": "*",
