--- a/website/package.json
+++ b/website/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "bower": "^1.6.5",
     "del": "^1.1.1",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "^2.1.0",
