--- a/server/pom.xml
+++ b/server/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>Java-WebSocket</artifactId>
             <version>1.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.ganyo</groupId>
+            <artifactId>gcm-server</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
