--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
             </intent-filter>
         </receiver>
 
-        <!--<service
-            android:name="me.rubendm.captiom.MyGcmListenerService"
+        <service
+            android:name="me.rubendm.captiom.mobile.services.CaptiomGcmListenerService"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
@@ -38,12 +38,16 @@
         </service>
 
         <service
-            android:name="me.rubendm.captiom.MyInstanceIDListenerService"
+            android:name="me.rubendm.captiom.mobile.services.RegistrationIntentService$InstanceIDListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID"/>
             </intent-filter>
-        </service>-->
+        </service>
+        <service
+            android:name="me.rubendm.captiom.mobile.services.RegistrationIntentService"
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
