--- a/website/bower.json
+++ b/website/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "captiom",
   "private": true,
   "dependencies": {
     "polymer": "Polymer/polymer#^1.2.0",
@@ -12,9 +12,5 @@
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#~1.0.10",
     "paper-menu": "PolymerElements/paper-menu#~1.1.1",
     "paper-item": "PolymerElements/paper-item#~1.0.7"
-  },
-  "devDependencies": {
-    "web-component-tester": "*",
-    "test-fixture": "PolymerElements/test-fixture#^1.0.0"
   }
 }
