--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,6 @@
 {
-  "private": true,
+  "name": "captiom",
+  "version": "1.0.0",
   "devDependencies": {
     "bower": "^1.6.5",
     "del": "^1.1.1",
