--- a/android-client/local.properties
+++ b/android-client/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 06 19:15:17 WEST 2015
-sdk.dir=/Users/rubendm/Developer/Android SDK
+#Sun Jan 31 15:16:18 WET 2016
+sdk.dir=/Users/rubendm/Library/Android/sdk
